# koboldkeys

./: README.md  conf.toml  style.css
src/: .gitignore  CMakeLists.txt  config.cpp  config.h  input.c  input.h  key.h  main.c  structs.h  style.css  toml.toml  window.c  window.h
