cmake_minimum_required(VERSION 4.0.0)
project(KoboldKeys)
find_package(PkgConfig REQUIRED)

pkg_check_modules(GTK REQUIRED gtk+-3.0)
pkg_check_modules(GTKLAYERSHELL REQUIRED gtk-layer-shell-0)
pkg_check_modules(TOML REQUIRED tomlplusplus)
pkg_check_modules(XKB REQUIRED xkbcommon)
add_executable(koboldkeys main.c window.c input.c config.cpp)
target_include_directories(koboldkeys PUBLIC ${GTK_INCLUDE_DIRS})
target_link_libraries(koboldkeys PUBLIC ${GTK_LIBRARIES})
target_link_libraries(koboldkeys PUBLIC ${GTKLAYERSHELL_LIBRARIES})
target_link_libraries(koboldkeys PUBLIC ${TOML_LIBRARIES})
target_link_libraries(koboldkeys PUBLIC ${XKB_LIBRARIES})
target_compile_options(koboldkeys PUBLIC -fsanitize=address)
target_link_options(koboldkeys PUBLIC -fsanitize=address)