cmake_minimum_required(VERSION 4.0.0)
project(KoboldKeys)

add_executable(koboldkeys main.c window.c input.c config.cpp)
option(KOBOLDKEYS_FEATURE_LAYER_SHELL "Allow a layer shell window through gtk-layer-shell" ON)
find_package(PkgConfig REQUIRED)

pkg_check_modules(GTK REQUIRED gtk+-3.0)
if(KOBOLDKEYS_FEATURE_LAYER_SHELL)
    pkg_check_modules(GTKLAYERSHELL REQUIRED gtk-layer-shell-0)
    target_link_libraries(koboldkeys PUBLIC ${GTKLAYERSHELL_LIBRARIES})
    target_compile_definitions(koboldkeys PRIVATE LAYER_SHELL)
endif()
pkg_check_modules(TOML REQUIRED tomlplusplus)
pkg_check_modules(XKB REQUIRED xkbcommon)
target_include_directories(koboldkeys PUBLIC ${GTK_INCLUDE_DIRS})
target_link_libraries(koboldkeys PUBLIC ${GTK_LIBRARIES})
target_link_libraries(koboldkeys PUBLIC ${TOML_LIBRARIES})
target_link_libraries(koboldkeys PUBLIC ${XKB_LIBRARIES})
target_compile_options(koboldkeys PUBLIC -fsanitize=address)
target_link_options(koboldkeys PUBLIC -fsanitize=address)